src/test/deca/context/valid/logic/inequality.deca
// Description:
//    Programme valide ayant pour but de tester l'inegalite logique.
//
// Resultats:
//    c=true;

{
    int a = 2;
    boolean c = (a != 2);
}